--- a/assets/_colors.scss
+++ b/assets/_colors.scss
@@ -6,3 +6,5 @@ $highlight: #6de8ff;
 $highlight_alt: #ffffca;
 $font_color: #d7e5e9;
 $base_grey: #595959;
+$highlight_error: #ff6d6d;
+$highlight_success: #6dff9b;
